Add header and golem images

--- a/content/post/2019-12-05-test-post.markdown
+++ b/content/post/2019-12-05-test-post.markdown
@@ -8,7 +8,7 @@ categories:
 tags:
   - test
 subtitle: ''
-summary: ''
+summary: 'This is the summary of the post'
 authors: []
 lastmod: '2019-12-05T16:21:10+01:00'
 featured: no
@@ -19,8 +19,12 @@ image:
 projects: []
 ---
 
+This one is empty
 
 
-<p>This one is empty</p>
-<pre class="r"><code>plot(cars)</code></pre>
-<p><img src="/post/2019-12-05-test-post_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
+```r
+plot(cars)
+```
+
+<img src="/post/2019-12-05-test-post_files/figure-html/unnamed-chunk-1-1.png" width="672" />
+
