--- a/how-to.Rmd
+++ b/how-to.Rmd
@@ -9,22 +9,31 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Add a post to "News" section
+## Add content
+### Add a post to "News" section
 
 - Create a directory with name being the slug of the post under "content/post"
     + A slug has no space, no special character except `-`, everything in lowercase
-- Create a ".Rmarkdown" file using {blogdown} addin "New Post". 
-    + Save this file as "index.Rmardown" in the directory created above
-- To add a featured image for the post, add an image called "featured.png" or "featured.jpg" in this same directory
+- Create a ".Rmarkdown" file using {blogdown} addin "New Post" *or copy content from an existing one (which is easier)*. 
+    + Save this file as **"index.Rmardown"** in the directory created above
+- To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
 
 
-## Add a new "Documentation"
+### Add a new "Documentation"
 
 - Create a directory with name being the slug of the post under "content/publication"
     + A slug has no space, no special character except `-`, everything in lowercase
-- Create a ".Rmarkdown" file using {blogdown} addin "New Post". 
-    + Save this file as "index.Rmardown" in the directory created above
-- To add a featured image for the post, add an image called "featured.png" or "featured.jpg" in this same directory
+- Create a ".Rmarkdown" file using {blogdown} addin "New Post" *or copy content from an existing one (which is easier)*. 
+    + Save this file as **"index.Rmardown"** in the directory created above
+- To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
+
+### Add a new "Package"
+
+- Create a directory with name being the slug of the post under "content/packages_list"
+    + A slug has no space, no special character except `-`, everything in lowercase
+- Create a ".Rmarkdown" file using {blogdown} addin "New Post" *or copy content from an existing one (which is easier)*. 
+    + Save this file as **"index.Rmardown"** in the directory created above
+- To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
 
 ## Structure of the website (active widgets)
 
