--- a/how-to.Rmd
+++ b/how-to.Rmd
@@ -9,13 +9,20 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Clone this project from github
+
+- `git clone https://github.com/ThinkR-open/golemverse.org.git`
+
+- Retriece theme :
+    + `git submodule update --init --recursive`
+
 ## Add content
 ### Add a post to "News" section
 
 - Create a directory with name being the slug of the post under "content/post"
     + A slug has no space, no special character except `-`, everything in lowercase
 - Create a ".Rmarkdown" file using {blogdown} addin "New Post" *or copy content from an existing one (which is easier)*. 
-    + Save this file as **"index.Rmardown"** in the directory created above
+    + Save this file as **"index.Rmarkdown"** in the directory created above
 - To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
     + Best dimension is 1024*512
 
@@ -29,8 +36,28 @@ Add to the list in "content/home/resources".
 - Create a directory with name being the slug of the post under "content/packages_list"
     + A slug has no space, no special character except `-`, everything in lowercase
 - Create a ".Rmarkdown" file using {blogdown} addin "New Post" *or copy content from an existing one (which is easier)*. 
-    + Save this file as **"index.Rmardown"** in the directory created above
+    + Save this file as **"index.Rmarkdown"** in the directory created above
 - To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
+
+## Add new stream
+
+- Create a directory with name being the slug of the post under "content/talk"
+    + A slug has no space, no special character except `-`, everything in lowercase
+- Copy content from an existing one (which is easier). 
+    + Save this file as **"index.Rmarkdown"** in the directory created above
+- Fill `categories: ["stream"]`
+- Fill other parameters in the YAML
+- To add a featured image for the post, add an image called **"featured.png"** or **"featured.jpg"** in this same directory
+
+
+Slides can be added in a few ways:
+
+- **Create** slides using Academic's [*Slides*](https://sourcethemes.com/academic/docs/managing-content/#create-slides) feature and link using `slides` parameter in the front matter of the talk file
+- **Upload** an existing slide deck to `static/` and link using `url_slides` parameter in the front matter of the talk file
+- **Embed** your slides (e.g. Google Slides) or presentation video on this page using [shortcodes](https://sourcethemes.com/academic/docs/writing-markdown-latex/).
+
+Further talk details can easily be added to this page using *Markdown* and $\rm \LaTeX$ math code.
+
 
 ## Structure of the website (active widgets)
 
@@ -85,4 +112,36 @@ See **publications.md** in home page above.
 
 To modify header menu, go to "config/_default/menus.toml". 
 
+## Modify footer
 
+Modify HTML with Hugo template in "layouts/partials/site_footer.html"
+
+## Modify favicon
+
+Add an image with size 512*512 in `assets/images/icon.png`
+
+
+## Update academic theme
+Read news: https://sourcethemes.com/academic/updates
+
+> Update hugo version required in `.travis.yml` if needed
+
+If you installed by Git cloning hugo-academic
+
+Before updating for the first time, the remote origin repository should be renamed to upstream:
+```
+cd themes/academic
+git remote rename origin upstream
+```
+To list all available updates:
+```
+cd themes/academic
+git fetch upstream
+git log --pretty=oneline --abbrev-commit --decorate HEAD..upstream/master
+```
+Then, update by running:
+```
+git checkout <VERSION>
+git pull upstream
+```
+where <VERSION> is defined in the previous section
