--- a/index.qmd
+++ b/index.qmd
@@ -8,8 +8,9 @@ listing:
   - contents: news
     type: default
     id: blog-listings
-    max-items: 3
+    max-items: 5
     sort: "date desc"
+    feed: true
 ---
 
 :::{#hero-heading}
