--- a/packages/brochure/index.qmd
+++ b/packages/brochure/index.qmd
@@ -21,14 +21,26 @@ The goal of `{brochure}` is to provide a mechanism for creating natively multi-p
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg">
 
+<a href="https://CRAN.R-project.org/package=brochure">
 <img src = "https://www.r-pkg.org/badges/version/brochure">
+</a>
 
-<img src = "https://cranlogs.r-pkg.org/badges/brochure">
+<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/brochure">
+  <img src = "https://cranlogs.r-pkg.org/badges/brochure">
+</a>
 
-<span style="text-shadow: none;"><a class="github-button" href="https://github.com/colinfay/brochure" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star this on GitHub">Star brochure on Github</a><script async defer src="https://buttons.github.io/buttons.js"></script></span>
+<a href="https://github.com/colinfay/brochure/actions">
+ <img src="https://github.com/colinfay/brochure/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
+</a>
 
+<a class="github-button" href="https://github.com/colinfay/brochure" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star brochure on Github</a>
+
+<a class="github-button" href="https://github.com/colinfay/brochure/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
 </div>
 
 :::
 
 :::
+
+
+<script async defer src="https://buttons.github.io/buttons.js"></script>
