--- a/packages/ghooks/index.qmd
+++ b/packages/ghooks/index.qmd
@@ -21,14 +21,26 @@ The goal of `{ghooks}` is to provide `{golem}` hooks for standard `{shiny}` apps
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg">
 
+<a href="https://CRAN.R-project.org/package=ghooks">
 <img src = "https://www.r-pkg.org/badges/version/ghooks">
+</a>
 
-<img src = "https://cranlogs.r-pkg.org/badges/ghooks">
+<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/ghooks">
+  <img src = "https://cranlogs.r-pkg.org/badges/ghooks">
+</a>
 
-<span style="text-shadow: none;"><a class="github-button" href="https://github.com/thinkr-open/ghooks" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star this on GitHub">Star ghooks on Github</a><script async defer src="https://buttons.github.io/buttons.js"></script></span>
+<a href="https://github.com/thinkr-open/ghooks/actions">
+ <img src="https://github.com/thinkr-open/ghooks/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
+</a>
 
+<a class="github-button" href="https://github.com/thinkr-open/ghooks" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star ghooks on Github</a>
+
+<a class="github-button" href="https://github.com/thinkr-open/ghooks/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
 </div>
 
 :::
 
 :::
+
+
+<script async defer src="https://buttons.github.io/buttons.js"></script>
