--- a/packages/w3css/index.qmd
+++ b/packages/w3css/index.qmd
@@ -21,14 +21,26 @@ An implementation of W3 CSS https://www.w3schools.com/w3css/ for `{shiny}``.
 
 <img src = "https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg">
 
+<a href="https://CRAN.R-project.org/package=w3css">
 <img src = "https://www.r-pkg.org/badges/version/w3css">
+</a>
 
-<img src = "https://cranlogs.r-pkg.org/badges/w3css">
+<a href="https://cranlogs.r-pkg.org/downloads/total/last-month/w3css">
+  <img src = "https://cranlogs.r-pkg.org/badges/w3css">
+</a>
 
-<span style="text-shadow: none;"><a class="github-button" href="https://github.com/thinkr-open/w3css" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star this on GitHub">Star w3css on Github</a><script async defer src="https://buttons.github.io/buttons.js"></script></span>
+<a href="https://github.com/thinkr-open/w3css/actions">
+ <img src="https://github.com/thinkr-open/w3css/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"/>
+</a>
 
+<a class="github-button" href="https://github.com/thinkr-open/w3css" data-icon="octicon-star" data-show-count="true" aria-label="Star this on GitHub">Star w3css on Github</a>
+
+<a class="github-button" href="https://github.com/thinkr-open/w3css/issues" data-icon="octicon-issue-opened"  data-show-count="true" aria-label="Issue buttons/github-buttons on GitHub">Issue</a>
 </div>
 
 :::
 
 :::
+
+
+<script async defer src="https://buttons.github.io/buttons.js"></script>
